# XOR-Neural-Network

./: README.md  pyproject.toml
src/: main.py
src/NeuralNetworks/: OneLayerNN.py  TwoLayerNN.py
